--- a/css/style-v1.css
+++ b/css/style-v1.css
@@ -1672,13 +1672,13 @@ sup {
 .dialog__content .header-picture {
   width: 100%;
   height: 18rem;
-  background: url("../img/background-newsletter.jpg") center;
+  background: url("../img/cd_background1.jpg") center;
   background-size: cover;
 }
 .dialog__content .dialog-inner {
   padding: 5rem 5rem 0 5rem;
   overflow: hidden;
-  background: url("../img/background-newsletter-inner.jpg") center;
+  background: url("../img/cd_background1.jpg") center;
   background-size: cover;
 }
 .dialog__content .dialog-inner::before {
